base/booking-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-app-deployment
  namespace: booking-app       # ⬅️ odporúčané (rovnako ako insurance)
  labels:
    app: booking-app

spec:
  replicas: 1               # ⬅️ k3s / 1-node cluster

  selector:
    matchLabels:
      app: booking-app

  template:
    metadata:
      labels:
        app: booking-app

    spec:
      imagePullSecrets:
        - name: ghcr-login-secret

      terminationGracePeriodSeconds: 30

      containers:
        - name: booking-app-container
          image: ghcr.io/gloziksoft/booking-app:prod
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
              name: http

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
