base/booking-app/postgresql-statefulset.yaml
# git_ops-K8-config/base/booking-app/postgresql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-booking-app
  labels:
    app: postgresql-booking
spec:
  serviceName: "postgresql-service"
  replicas: 1 
  selector:
    matchLabels:
      app: postgresql-booking
  template:
    metadata:
      labels:
        app: postgresql-booking
    spec:
      containers:
      - name: postgresql
        image: postgres:14
        ports:
        - containerPort: 5432
        
        resources:
          requests:
            memory: "128Mi"
            cpu: "150m"
          limits:
            memory: "512Mi"
            cpu: "1000m"

        volumeMounts:
        - name: postgresql-persistent-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgresql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
